--- a/src/editor.html
+++ b/src/editor.html
@@ -1,5 +1,6 @@
 <div class="vue-html5-editor" :class="{'full-screen':fullScreen}" :style="{'z-index':zIndex}">
     <div class="toolbar" :style="{'z-index':zIndex+1}" ref="toolbar">
+        test npm publish
         <ul>
             <template v-for="module in modules">
                 <li :title="locale[module.i18n]" @click="activeModule(module)">
